# harbor

./: Procfile  docker-compose.yml  package.json
backend/: Cargo.toml  Dockerfile
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs
backend/migrations/: 20220416190518_initial.sql  20220416191314_create_applications.down.sql  20220416191314_create_applications.sql  20220416191314_create_applications.up.sql  20220416210611_create_services.down.sql  20220416210611_create_services.sql  20220416210611_create_services.up.sql
backend/src/: main.rs
backend/src/graphql/: application.rs  mod.rs  objects.rs  query.rs  service.rs
backend/src/model/: application.rs  mod.rs  service.rs
frontend/: Dockerfile  README.md  next.config.js
frontend/pages/: _app.tsx  index.tsx
public/: index.html  manifest.json
src/: index.tsx
src/pages/: App.tsx  Containers.tsx  Overview.tsx
src/styles/: _card.scss  _globals.scss  _nav.scss  index.scss
