[package]
name = "harbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-graphql = "3.0.17"
async-graphql-axum = "3.0.17"
axum = "0.4.2"
bollard = "0.11.1"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.14"
sea-orm = { version = "0.5.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.7"
