[package]
name = "harbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-graphql = { version = "3.0.17", features = ["chrono"] }
async-graphql-axum = "3.0.17"
axum = "0.5.1"
bollard = "0.11.1"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.7"
